Finalização de padrão de tela

--- a/src/Components/Aside/Aside.module.sass
+++ b/src/Components/Aside/Aside.module.sass
@@ -14,6 +14,7 @@
         height: 20px
     .upper
         margin-left: 32px
+
         ul
             li
                 margin-top: 32px
@@ -22,12 +23,15 @@
             li:hover
                 color: #002F24
                 font-weight: bold
+                // Lembrar de fazer o estilo pra quando estiver dentro da página
+                //border-style: solid
         a
             cursor: pointer
         a:hover
             color: #002F24
             font-weight: bold
-        .other_options
+            // Lembrar de fazer o estilo pra quando estiver dentro da página
+            //border-style: solid
     .down
         margin-top: 32px
         margin-left: 16px
@@ -39,3 +43,5 @@
             li:hover
                 color: #002F24
                 font-weight: bold
+                // Lembrar de fazer o estilo pra quando estiver dentro da página
+                //border-style: solid
