--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,15 @@
 ul{
   list-style-type: none;
 }
+
+li{
+  text-decoration: none;
+}
+
+a{
+  text-decoration: none;
+}
+a:visited{
+  text-decoration: none;
+  color: black;
+}
