--- a/src/Components/Aside/Aside.module.sass
+++ b/src/Components/Aside/Aside.module.sass
@@ -2,11 +2,9 @@
     display: flex
     flex-direction: column
     align-self: flex-end
-    //position: fixed
-    float: left
-    height: 100vh
+    min-height: calc(100vh - 20px)
 
-    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25)
+    box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
     width: 240px
     font-size: 18px
     .icon
