--- a/src/Components/Aside/Aside.module.sass
+++ b/src/Components/Aside/Aside.module.sass
@@ -2,7 +2,9 @@
     display: flex
     flex-direction: column
     align-self: flex-end
-    min-height: calc(100vh - 20px)
+    //min-height: calc(100vh - 20px)
+    float: left
+    height: 100vh
 
     box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
     width: 240px
