--- a/src/Pages/Settings/Settings.module.sass
+++ b/src/Pages/Settings/Settings.module.sass
@@ -1,4 +1,5 @@
 .section
+    font-family: roboto
     h1
         color: #002F24
         font-family: Poppins
@@ -19,9 +20,19 @@
                 display: flex
                 justify-content: space-between
                 margin-bottom: 28px
+                .button
+                    margin-right: 80px
                 .desc
                     h2
                         font-size: 18px
                         margin-bottom: 12px
-                .button
-                    margin-right: 80px
+                    select
+                        width: 366px
+                        height: 61px
+                        flex-shrink: 0
+                        border-radius: 25px
+                        color: #5A5A5F
+                        font-family: Poppins
+                        font-size: 18px                
+                        padding: 14px 112px 15px 16px
+
