--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --text-b: #668faf;
   --text-g: #5b5a60;
   --text-l: #c1f0de;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Poopins';
 }
 
 ul {
