--- a/src/Pages/Register/Register.module.scss
+++ b/src/Pages/Register/Register.module.scss
@@ -3,14 +3,14 @@
   width: 100%;
   position: relative;
   overflow: hidden;
-  padding: 0.75rem;
+  //padding: 0.75rem;
   display: grid;
   grid-template-columns: 2fr 1.1fr;
 }
 
 .design {
   max-width: 100%;
-  height: 90vh;
+  height: 100vh;
   position: absolute;
   opacity: 0.8;
   opacity: 0;
@@ -19,8 +19,8 @@
 }
 
 .cover {
-    order: 2;
-  height: 87vh;
+  order: 2;
+  height: 100vh;
   display: flex;
   justify-content: center;
   background-color: var(--bg-g);
