--- a/src/Components/Aside/Aside.module.sass
+++ b/src/Components/Aside/Aside.module.sass
@@ -9,6 +9,7 @@
     box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
     width: 240px
     font-size: 18px
+    margin-right: 32px
     .icon
         width: 20px
         height: 20px
