styled-components e fonte poppins

--- a/src/Pages/Dashboard/Dashboard.module.sass
+++ b/src/Pages/Dashboard/Dashboard.module.sass
@@ -1,5 +1,4 @@
 .dashboard
-    font-family: 'Poopins'
     margin-left: 250px
     .list
         .terreno
@@ -29,6 +28,7 @@
                     font-size: 18px
                     p
                         margin: 20px
+                    .buttonCustom
                     button
                         margin: 20px
                         width: 160px
