--- a/src/Components/Aside/Aside.module.sass
+++ b/src/Components/Aside/Aside.module.sass
@@ -4,7 +4,8 @@
     align-self: flex-end
     //min-height: calc(100vh - 20px)
     float: left
-    height: 100vh
+    height: auto
+    border-radius: 0 30px 30px 0
 
     box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
     width: 240px
