--- a/src/Components/Aside/Aside.module.sass
+++ b/src/Components/Aside/Aside.module.sass
@@ -11,6 +11,8 @@
     width: 240px
     font-size: 18px
     margin-right: 32px
+
+    //position: fixed
     .icon
         width: 20px
         height: 20px
