--- a/src/Components/Header/Header.module.sass
+++ b/src/Components/Header/Header.module.sass
@@ -13,6 +13,9 @@
     .search
         display: flex
         flex: 1
+        .SearchInput
+            width: 70vh
+            padding: 0.5rem
     .logout
         display: flex
         flex: 0
