inicio de terreno singular

--- a/src/Components/Aside/Aside.module.sass
+++ b/src/Components/Aside/Aside.module.sass
@@ -11,8 +11,6 @@
     width: 240px
     font-size: 18px
     margin-right: 32px
-
-    //position: fixed
     .icon
         width: 20px
         height: 20px
@@ -32,6 +30,7 @@
                 //border-style: solid
         a
             cursor: pointer
+            transition: 0.5s
         a:hover
             color: #002F24
             font-weight: bold
