--- a/src/Pages/Dashboard/Dashboard.module.sass
+++ b/src/Pages/Dashboard/Dashboard.module.sass
@@ -35,11 +35,15 @@
                         transition: 0.3s
                         height: 28px
                         width: 28px
-                    
+
             .content
                 margin: 20px
                 display: flex
                 gap: 12px
+                .imagem
+                    width: 16rem
+                    height: 18rem
+                    border-radius: 20px
                 .info
                     font-size: 18px
                     p
