correção de styles

--- a/src/Pages/Terreno/Terreno.module.sass
+++ b/src/Pages/Terreno/Terreno.module.sass
@@ -35,31 +35,31 @@
     .mainContent
         color: #002F24
         display: flex
-        .imagem
-            width: 680px
-            height: 100%
-            border-radius: 30px
-        .info
-            margin-left: 30px
-            .clima
-                //border: 2px solid red
-                padding: 0.2rem 2rem 2rem 2rem
-                font-size: 20px
-                width: 50vh
+        // .imagem
+        //     width: 680px
+        //     height: 100%
+        //     border-radius: 30px
+        // .info
+        //     margin-left: 30px
+        //     .clima
+        //         //border: 2px solid red
+        //         padding: 0.2rem 2rem 2rem 2rem
+        //         font-size: 20px
+        //         width: 50vh
 
-                border-radius: 30px
-                box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
-                .climaHoje
-                    display: flex
-                    //justify-content: center
-                    //align-items: center
-                    //text-align: center
-                    .climaText
-                        margin-right: 12px
-                        p
-                            text-align: left
-                        .temperatura
-                            font-size: 64px
-                    .icon
-                        font-size: 128px
-                        color: orange
+        //         border-radius: 30px
+        //         box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
+        //         .climaHoje
+        //             display: flex
+        //             //justify-content: center
+        //             //align-items: center
+        //             //text-align: center
+        //             .climaText
+        //                 margin-right: 12px
+        //                 p
+        //                     text-align: left
+        //                 .temperatura
+        //                     font-size: 64px
+        //             .icon
+        //                 font-size: 128px
+        //                 color: orange
