--- a/src/Components/TerrenoOptions/Geral/Geral.module.sass
+++ b/src/Components/TerrenoOptions/Geral/Geral.module.sass
@@ -30,3 +30,13 @@
                 .icon
                     font-size: 128px
                     color: orange
+        .solo
+            padding: 0.2rem 2rem 2rem 2rem
+            font-size: 20px
+            width: 50vh
+
+            border-radius: 30px
+            box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
+            h1
+                font-size: 32px
+            
