--- a/src/Components/TerrenoOptions/Geral/Geral.module.sass
+++ b/src/Components/TerrenoOptions/Geral/Geral.module.sass
@@ -13,6 +13,7 @@
             padding: 0.2rem 2rem 2rem 2rem
             font-size: 20px
             width: 50vh
+            margin-bottom: 16px
 
             border-radius: 30px
             box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
@@ -34,9 +35,21 @@
             padding: 0.2rem 2rem 2rem 2rem
             font-size: 20px
             width: 50vh
+            margin-bottom: 16px
 
             border-radius: 30px
             box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
             h1
                 font-size: 32px
-            
+                margin-bottom: 24px
+                text-align: center
+            .info
+                li
+                    display: flex
+                    justify-content: space-between
+                    margin-bottom: 20px
+        .historico
+            .icon
+                font-size: 64px
+                color: #002F24
+                cursor: pointer
