--- a/src/Components/TerrenoOptions/Clima/Clima.module.sass
+++ b/src/Components/TerrenoOptions/Clima/Clima.module.sass
@@ -1,22 +1,24 @@
 .mainContent
     color: #002F24
     display: flex
-    .imagem
-        width: 60vh
-        height: 60vh
-        border-radius: 30px
-        margin-bottom: 30px
     .info
         margin-left: 30px
+        display: flex
+        flex-direction: row
         .clima
             //border: 2px solid red
             padding: 0.2rem 2rem 2rem 2rem
             font-size: 24px
-            width: 30vh
+            width: 60vh
             margin-bottom: 16px
 
             border-radius: 30px
             box-shadow: 1px 5px 4px 0px rgba(0, 0, 0, 0.25)
+            .imagem
+                width: 60vh
+                height: 60vh
+                border-radius: 30px
+                margin-bottom: 30px
             .climaHoje
                 display: flex
                 //justify-content: center
