--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+@import '@radix-ui/themes/styles.css';
+
 * {
   padding: 0;
   margin: 0;
