--- a/src/Components/DeletarTerreno/DeletarTerreno.module.sass
+++ b/src/Components/DeletarTerreno/DeletarTerreno.module.sass
@@ -4,6 +4,10 @@
     cursor: pointer
     margin-right: 14px
     transition: 0.3s
+.icon:hover
+    transition: 0.3s
+    height: 28px
+    width: 28px
 .content
     .description
         display: flex
