--- a/src/Components/Header/Header.module.sass
+++ b/src/Components/Header/Header.module.sass
@@ -21,3 +21,9 @@
         display: flex
         flex: 0
         margin-right: 24px
+        .logText
+            text-decoration: none
+            color: #003024
+        .logText:visited
+            text-decoration: none
+            color: black
