--- a/src/Components/CadastrarTerreno/TelaCadastro/TelaCadastro.module.sass
+++ b/src/Components/CadastrarTerreno/TelaCadastro/TelaCadastro.module.sass
@@ -1,11 +1,20 @@
+
 .main
     h1
         text-align: center
         border-bottom: 3px solid #003024
     .content
         display: flex
+        flex-direction: column
         padding: 2rem
         gap: 32px
+        .image
+            align-content: center
+            align-items: center
+            text-align: center
+            .map
+                height: 50%
+                width: 50%
         .form
             display: flex
             flex-direction: column
