--- a/src/Components/CadastrarTerreno/TelaCadastro/TelaCadastro.module.sass
+++ b/src/Components/CadastrarTerreno/TelaCadastro/TelaCadastro.module.sass
@@ -1,5 +1,8 @@
-
 .main
+    align-content: center
+    text-align: center
+    align-items: center
+    justify-content: center
     h1
         text-align: center
         border-bottom: 3px solid #003024
@@ -9,7 +12,7 @@
         padding: 2rem
         gap: 32px
         .map
-            height: 50%
+            height: 100%
         .form
             display: flex
             flex-direction: column
