--- a/src/Components/CadastrarTerreno/TelaCadastro/TelaCadastro.module.sass
+++ b/src/Components/CadastrarTerreno/TelaCadastro/TelaCadastro.module.sass
@@ -11,8 +11,10 @@
         flex-direction: column
         padding: 2rem
         gap: 32px
-        .map
-            height: 100%
+        #map
+            height: 50vh
+            .mapboxgl-control-container
+                display: none
         .form
             display: flex
             flex-direction: column
