--- a/src/Components/Mapa/Mapa.sass
+++ b/src/Components/Mapa/Mapa.sass
@@ -1,5 +1,5 @@
 .Mapa
-    height: 1%
-    //height: 50vh
+    //height: 1%
+    height: 50vh
     .mapboxgl-control-container
         display: none
