--- a/src/Pages/Dashboard/Dashboard.module.sass
+++ b/src/Pages/Dashboard/Dashboard.module.sass
@@ -40,10 +40,12 @@
                 margin: 20px
                 display: flex
                 gap: 12px
-                .imagem
-                    width: 16rem
-                    height: 18rem
-                    border-radius: 20px
+                .mapDash
+                    // width: 16rem
+                    // height: 18rem
+                    //height: 100%
+                    //border-radius: 20px
+                    //position: relative
                 .info
                     font-size: 18px
                     p
