--- a/src/Pages/Dashboard/Dashboard.module.sass
+++ b/src/Pages/Dashboard/Dashboard.module.sass
@@ -45,7 +45,8 @@
                     // height: 18rem
                     //height: 100%
                     //border-radius: 20px
-                    //position: relative
+                    position: relative
+                    border: 5px solid red 
                 .info
                     font-size: 18px
                     p
