--- a/src/index.css
+++ b/src/index.css
@@ -44,4 +44,7 @@ a:visited {
 #DEUSFIEL .mapboxgl-canvas {
   position: relative !important;
   width: 100% !important;
+  height: 100% !important;
+  border-radius: 30px !important;
+
 }
