--- a/src/Components/TerrenoOptions/Clima/Clima.module.sass
+++ b/src/Components/TerrenoOptions/Clima/Clima.module.sass
@@ -7,7 +7,7 @@
         flex-direction: row
         .clima
             //border: 2px solid red
-            padding: 0.2rem 2rem 2rem 2rem
+            padding: 0.2rem 2rem 5rem 2rem
             font-size: 24px
             width: 60vh
             margin-bottom: 16px
@@ -21,6 +21,7 @@
                 margin-bottom: 30px
             .climaHoje
                 display: flex
+                margin-top: -2rem
                 //justify-content: center
                 //align-items: center
                 //text-align: center
