--- a/src/Components/TerrenoOptions/UV/UV.module.sass
+++ b/src/Components/TerrenoOptions/UV/UV.module.sass
@@ -20,3 +20,5 @@
                 height: 60vh
                 border-radius: 30px
                 margin-bottom: 30px
+        .dados
+            margin-left: 1rem
