--- a/src/Components/TerrenoOptions/NDVI/NDVI.module.sass
+++ b/src/Components/TerrenoOptions/NDVI/NDVI.module.sass
@@ -20,3 +20,10 @@
                 height: 60vh
                 border-radius: 30px
                 margin-bottom: 30px
+            .data
+                margin-left: 32px
+                .list
+                    li
+                        display: flex
+                        justify-content: space-between
+                        gap: 4rem
