--- a/src/Components/TerrenoOptions/NDVI/NDVI.module.sass
+++ b/src/Components/TerrenoOptions/NDVI/NDVI.module.sass
@@ -1,8 +1,10 @@
 .mainContent
     color: #002F24
     display: flex
+    margin-right: 3rem
     .info
         margin-left: 30px
+        display: flex
         .ndvi
             //border: 2px solid red
             padding: 0.2rem 2rem 2rem 2rem
