--- a/src/Components/TerrenoOptions/NDVI/NDVI.module.sass
+++ b/src/Components/TerrenoOptions/NDVI/NDVI.module.sass
@@ -24,6 +24,10 @@
                 margin-bottom: 30px
             .data
                 margin-left: 32px
+                .item
+                    margin: 32px
+                h3
+                    text-align: left
                 .list
                     li
                         display: flex
