estilização de settings

--- a/src/Pages/Settings/Settings.module.sass
+++ b/src/Pages/Settings/Settings.module.sass
@@ -22,6 +22,10 @@
                 margin-bottom: 28px
                 .button
                     margin-right: 80px
+                    .label
+                        position: absolute
+                        margin-left: -5rem
+                        font-weight: bold
                 .desc
                     h2
                         font-size: 18px
