--- a/src/Components/TerrenoOptions/UV/UV.module.sass
+++ b/src/Components/TerrenoOptions/UV/UV.module.sass
@@ -1,6 +1,8 @@
 .mainContent
     color: #002F24
     display: flex
+    .bold
+        font-weight: bold
     .info
         margin-left: 30px
         .uv
